RESOLVED FIXED273326
Leaked 2D contexts might consume all OS global GPU resources
https://bugs.webkit.org/show_bug.cgi?id=273326
Summary Leaked 2D contexts might consume all OS global GPU resources
Kimmo Kinnunen
Reported 2024-04-26 09:59:59 PDT
Leaked canvases might consume all OS global GPU resources
Attachments
Kimmo Kinnunen
Comment 1 2024-04-26 10:00:28 PDT
Kimmo Kinnunen
Comment 2 2024-04-26 10:12:41 PDT
EWS
Comment 3 2024-05-02 23:53:11 PDT
Committed 278304@main (78038e7ea408): <https://commits.webkit.org/278304@main> Reviewed commits have been landed. Closing PR #27807 and removing active labels.
Kimmo Kinnunen
Comment 4 2024-05-16 05:37:28 PDT
Cameron McCormack (:heycam)
Comment 5 2024-07-24 23:25:44 PDT
EWS
Comment 6 2024-07-26 04:37:12 PDT
Committed 281395@main (80225aaf7451): <https://commits.webkit.org/281395@main> Reviewed commits have been landed. Closing PR #31211 and removing active labels.
EWS
Comment 7 2024-07-26 13:50:17 PDT
Committed 280938.134@safari-7619-branch (64a67ac4e224): <https://commits.webkit.org/280938.134@safari-7619-branch> Reviewed commits have been landed. Closing PR #1501 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.