Source/WebKit/GPUProcess/RemoteSharedResourceCache.h
@@ -29,6 +29,7 @@
 
 #include "MessageReceiver.h"
 #include "RemoteSerializedImageBufferIdentifier.h"
+#include "ScopedRenderingResourcesRequest.h"
 #include "ThreadSafeObjectHeap.h"
 #include <WebCore/ImageBuffer.h>
 #include <WebCore/ProcessIdentity.h>
@@ -44,7 +45,8 @@
 namespace WebKit {
 
 class GPUConnectionToWebProcess;
-// Class holding GPU process resources per Web Process.
+
+// Class holding GPU process resources per WebContent process.
 // Thread-safe.
 class RemoteSharedResourceCache final : public ThreadSafeRefCounted<RemoteSharedResourceCache>, IPC::MessageReceiver {
     WTF_MAKE_FAST_ALLOCATED;
@@ -54,6 +56,11 @@ public:
 
     void addSerializedImageBuffer(WebCore::RenderingResourceIdentifier, Ref<WebCore::ImageBuffer>);
     RefPtr<WebCore::ImageBuffer> takeSerializedImageBuffer(WebCore::RenderingResourceIdentifier);
+
+    Ref<ResourceCounter> acceleratedImageBufferCounter() const;
+    Ref<ResourceCounter> globalAcceleratedImageBufferCounter() const;
+
+    WebCore::RenderingMode adjustAcceleratedImageBufferRenderingMode(WebCore::RenderingPurpose) const;
 
     // IPC::MessageReceiver
     void didReceiveMessage(IPC::Connection&, IPC::Decoder&) final;
@@ -72,12 +79,12 @@ private:
     void releaseSerializedImageBuffer(WebCore::RenderingResourceIdentifier);
 
     IPC::ThreadSafeObjectHeap<RemoteSerializedImageBufferIdentifier, RefPtr<WebCore::ImageBuffer>> m_serializedImageBuffers;
+    Ref<ResourceCounter> m_acceleratedImageBufferCounter;
     WebCore::ProcessIdentity m_resourceOwner;
 #if HAVE(IOSURFACE)
     Ref<WebCore::IOSurfacePool> m_ioSurfacePool;
 #endif
 };
-
 
 } // namespace WebKit
 
