Source/WebKit/GPUProcess/graphics/RemoteRenderingBackend.cpp
@@ -208,6 +208,9 @@ void RemoteRenderingBackend::didFailCreateImageBuffer(RenderingResourceIdentifie
 
 void RemoteRenderingBackend::didCreateImageBuffer(Ref<ImageBuffer> imageBuffer)
 {
+    if (imageBuffer->renderingMode() == RenderingMode::Accelerated)
+        m_sharedResourceCache->didAddAcceleratedImageBuffer();
+
     auto imageBufferIdentifier = imageBuffer->renderingResourceIdentifier();
     auto* sharing = imageBuffer->toBackendSharing();
     auto handle = downcast<ImageBufferBackendHandleSharing>(*sharing).createBackendHandle();
@@ -284,6 +287,8 @@ RefPtr<ImageBuffer> RemoteRenderingBackend::allocateImageBuffer(const FloatSize&
 #endif
 
     RefPtr<ImageBuffer> imageBuffer;
+    if (renderingMode == RenderingMode::Accelerated)
+        renderingMode = m_sharedResourceCache->adjustAcceleratedImageBufferRenderingMode(purpose);
 
 #if ENABLE(RE_DYNAMIC_CONTENT_SCALING)
     if (m_gpuConnectionToWebProcess->isDynamicContentScalingEnabled() && (purpose == RenderingPurpose::LayerBacking || purpose == RenderingPurpose::DOM))
@@ -314,8 +319,8 @@ void RemoteRenderingBackend::releaseImageBuffer(RenderingResourceIdentifier rend
 {
     assertIsCurrent(workQueue());
     m_remoteDisplayLists.take(renderingResourceIdentifier);
-    bool success = m_remoteImageBuffers.take(renderingResourceIdentifier).get();
-    MESSAGE_CHECK(success, "Resource is being released before being cached."_s);
+    auto imageBuffer = takeImageBuffer(renderingResourceIdentifier);
+    MESSAGE_CHECK(imageBuffer, "Resource is being released before being cached."_s);
 }
 
 void RemoteRenderingBackend::createRemoteImageBufferSet(RemoteImageBufferSetIdentifier bufferSetIdentifier, WebCore::RenderingResourceIdentifier displayListIdentifier)
@@ -599,7 +604,10 @@ RefPtr<ImageBuffer> RemoteRenderingBackend::takeImageBuffer(RenderingResourceIde
     RefPtr remoteImageBuffer = remoteImageBufferReceiveQueue.get();
     remoteImageBufferReceiveQueue.reset();
     ASSERT(remoteImageBuffer->hasOneRef());
-    return remoteImageBuffer->imageBuffer();
+    Ref imageBuffer = remoteImageBuffer->imageBuffer();
+    if (imageBuffer->renderingMode() == RenderingMode::Accelerated)
+        m_sharedResourceCache->didTakeAcceleratedImageBuffer();
+    return imageBuffer;
 }
 
 void RemoteRenderingBackend::terminateWebProcess(ASCIILiteral message)
